bottom container fixes to prevent overlap. edits to mobile media queries

--- a/assets/index.css
+++ b/assets/index.css
@@ -34,9 +34,9 @@ body {
     position: absolute;
     min-width: 100%;
     height: 100%;
+    justify-content: center;
     margin: 0 auto;
     overflow: hidden;
-    justify-content: center;
 }
 
 h1 {
@@ -90,12 +90,12 @@ h1 {
     box-shadow: 0 0 1px #143b91;
     border-radius: 5px 35px;
     outline: none;
-    z-index: 50;
+    z-index: 12;
 }
 
 .colon {
     position: relative;
-    color:#5d1d31;
+    color:#793047;
     font-size: 88px;
     opacity: 80%;
 }
@@ -104,13 +104,13 @@ h1 {
     animation: flash 2s linear infinite;
 }
 
-@keyframes flash {
-    25% { opacity: 0; }
+    @keyframes flash {
+        25% { opacity: 0; }
 
-    50% { opacity: 0; }
+        50% { opacity: 0; }
 
-    100% { opacity: 80%; }
-}
+        100% { opacity: 80%; }
+    }
 
 .logoContainer {
     position: absolute;
@@ -130,20 +130,18 @@ h1 {
     position: absolute;
     min-width: 100%;
     min-height: 40%;
-    max-height: 100%;
     bottom: 0;
     background-color:rgba(110, 170, 250, 0.2);
-    z-index: 6;
     overflow-y: hidden;
+    z-index: -16;
 }
 
 #goal {
     position: relative;
     float: right;
-    margin-right: 15rem;
     margin-top: 7rem;
+    margin-right: 15rem;
     margin-bottom: 3rem;
-    z-index: 50;
 }
 
 /* 
@@ -159,7 +157,7 @@ h1 {
 */
 
 
-@media only screen and (max-width: 992px) {
+@media only screen and (max-width: 768px) {
     h1 {
         margin: 2rem;
         font-size: 26px;
@@ -182,26 +180,35 @@ h1 {
         justify-content: center;
     }
     .colon {
-        font-size: 44px;
+        font-size: 40px;
         line-height: 1rem;
     }
     #goal {
-        transform: scale(0.6);
+        transform: scale(0.7);
+        margin-top: 5rem;
+        margin-right: 2rem;
     }
 }
 
 @media (max-width: 768px) and (orientation: landscape) {
     .clockContainer {
-        margin-top: 8rem;
+        margin-top: 7rem;
     }
     .clock { 
         min-width: 5rem;
         max-width: 5rem;
-        height: 1rem;
+        height: 2rem;
         margin: 0 auto;
         padding: 4px 28px;
         border-radius: 2px 14px;
-        line-height: 1rem;
+        line-height: 2rem;
         font-size: 28px;
+    }
+    .bottomContainer {
+        max-height: 20%;
+    }
+    #goal {
+        margin-top: 9rem;
+        margin-right: 5rem;
     }
 }
